--- a/000_index.html
+++ b/000_index.html
@@ -8,6 +8,7 @@
   <body>
     <p>Primera version</p>
     <p>Esto se ha añadido desde local</p>
+    <p>Esto se ha añadido desde la nube</p>
     <br />
   </body>
 </html>
