--- a/000_index.html
+++ b/000_index.html
@@ -9,6 +9,7 @@
     <p>Primera version</p>
     <p>Esto se ha añadido desde local</p>
     <p>Esto se ha añadido desde la nube</p>
+    <p>Esto se ha añadido despues desde la nube</p>
     <br />
   </body>
 </html>
